--- a/app/src/main/res/layout/child_recycler_transaction.xml
+++ b/app/src/main/res/layout/child_recycler_transaction.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tols="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:paddingBottom="5dp"
-                android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:paddingTop="5dp">
+    <TextView
+        android:id="@+id/transaction_indicator"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        />
+
 
     <ImageView
+        android:layout_marginLeft="20dp"
         android:id="@+id/image_transaction"
         style="@style/imagesInRecycler"
         android:layout_centerVertical="true"
@@ -21,12 +26,11 @@
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/image_transaction"
         android:layout_marginStart="20dp"
-        android:layout_toEndOf="@id/image_transaction"
         android:text="TEST"
         android:textColor="#000"
-        />
+        android:layout_alignTop="@+id/image_transaction"
+        android:layout_toEndOf="@+id/image_transaction"/>
 
     <TextView
         android:id="@+id/detail_description"
@@ -38,6 +42,13 @@
         android:text="Test"
 
         android:textSize="12sp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/transaction_indicator"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:layout_below="@id/detail_description"-->
+        <!--android:layout_alignStart="@+id/detail_description"-->
+        <!--android:layout_alignEnd="@+id/date_transaction"/>-->
 
     <TextView
         android:textSize="24sp"
